# TDT4173-project

./: .gitignore  145+TeaBagging.ipynb  145-recreated.ipynb  AutoML.ipynb  Erik_CNN_exploration.ipynb  README.md  absolute_value.py  autoML_Erik.ipynb  autoML_Erik_MLJAR.ipynb  autoML_erik_OG.ipynb  autoML_erik_master.ipynb  autoML_mathias.ipynb  autogluon_S.ipynb  autogluon_attempt_2.csv  average_4_files.py  average_ensemble.py  average_ensemble_ABC_specialized.py  average_ensemble_A_B_C.py  average_ensemble_all_locations.py  averaged_predictions.csv  averaged_predictions_all_7_150.csv  averaged_predictions_all_7_150_updated.csv  averaged_predictions_all_7_8.csv  averaged_predictions_three best.csv  averaged_predictions_three_best_updated.csv  basically-145.ipynb  best_preds_B.csv  catboost_15_min_intervals.ipynb  catboost_model.ipynb  catboost_model_merged.ipynb  catboost_model_merged_2.ipynb  catboost_model_merged_vol3.ipynb  clean_data.py  clean_test_data.py  combined_predictions_10_11.csv  combined_predictions_10_11_12_updated.csv  combined_predictions_10_11_updated.csv  combined_predictions_150_158.csv  combined_predictions_A_B_C.csv  combined_predictions_combined_specialized.csv  (+55 more)
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
data/: read_files.ipynb
predictions/: A_xgboost.csv  B_xgboost.csv  C_xgboost.csv  ag_target_scale_2_h.csv  autogluon_attempt_1.csv  autogluon_attempt_3.csv  autogluon_attempt_simen.csv  autogluon_attempt_simen_7h.csv  averaged_predictions.csv  averaged_predictions_updated.csv  best_preds_A.csv  (+25 more)
(+9 files in other folders)
