[tool.poetry]
name = "project"
version = "0.1.0"
description = "Project"
authors = ["Mathias Aas <mathias.aas123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.x"
numpy = "^1.26.0"
pandas = "^2.1.1"
pyarrow = "^13.0.0"
matplotlib = "^3.8.0"
torch = "^2.0.1"
scikit-learn = "^1.3.1"
torchsummary = "^1.5.1"
catboost = "^1.2.2"
tpot = "^0.12.1"
mljar-supervised = "^1.1.1"
optuna = "^3.4.0"
autogluon-tabular = "^0.8.2"
autogluon = "^0.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
